<resources>
    <string name="app_name">Atelier 1</string>

    <string name="un">1</string>
    <string name="deux">2</string>
    <string name="trois">3</string>
    <string name="quatre">4</string>
    <string name="cinq">5</string>
    <string name="six">6</string>
    <string name="sept">7</string>
    <string name="huit">8</string>
    <string name="neuf">9</string>
    <string name="zéro">0</string>

    <string name="clear">C</string>
    <string name="plus">+</string>
    <string name="moins">-</string>
    <string name="multiplication">x</string>
    <string name="division">÷</string>
    <string name="point">.</string>
    <string name="puissance">^</string>
    <string name="Pourcentage">%</string>
    <string name="Racine">√x</string>
    <string name="parentheses1">()</string>
    <string name="égale">=</string>
    <string name="calculator">calculator</string>


</resources>